# KALAM-CBC

./: .env.example  .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: keep-alive.yml
data/: ambiguity_map.json  documents.json  prerequisites.json  state_data.json
data/schemes/: apy.json  ayushman_bharat.json  mgnrega.json  nfsa.json  nsap_igndps.json  nsap_ignoaps.json  nsap_ignwps.json  pm_kisan.json  pm_mudra.json  pm_svanidhi.json  pm_sym.json  pm_vishwakarma.json  pmay_g.json  pmay_u.json  pmegp.json  pmjdy.json  pmmvy.json  stand_up_india.json  sukanya_samriddhi.json  ujjwala.json
diagrams/: architecture.mermaid  prerequisite_dag.mermaid
docs/: architecture.md
src/: formatter.py  loader.py
src/conversation/: contradiction.py  engine.py  follow_up.py  system_prompt.py
src/engine/: benefit_calculator.py  bureaucratic_distance.py  confidence.py  doc_checklist.py  gap_analyzer.py  interaction_detector.py  life_events.py  path_optimizer.py  rule_engine.py  sensitivity.py  sequencer.py
src/models/: match_result.py  scheme.py  user_profile.py
tests/: accuracy_audit.py  fuzz_test.py  run_50_cases.py  run_full_audit.py  test_benefit_calculator.py  test_confidence.py  test_contradiction.py  test_edge_cases.py  test_gap_analyzer.py  test_hinglish.py  test_interaction_detector.py  test_life_events.py  test_loader.py  test_path_optimizer.py  test_rule_engine.py  test_sensitivity.py  test_sequencer.py  test_user_profile.py  web_test.py
web/: app.py
web/templates/: applications.html  base.html  (+7 more)
(+73 files in other folders)
